--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>salimov HW_4 portfolio</title>
+	<title>salimov HW_6 portfolio</title>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css">
@@ -249,6 +249,18 @@
 			</div>
 			<div class="subscribe">
 				<b class="subscribe__title">Подпишитесь на рассылку</b>
+				<form class="subscribe__form js-footer-form" autocomplete="off">
+					<label class="subscribe__field">
+						<input class="subscribe__input interactive" type="email" name="subscribe-email" placeholder=" ">
+						<span class="subscribe__label">E-mail</span>
+					</label>
+					<button type="submit" class="button subscribe__button interactive">
+						<span class="subscribe__button-text">Подписаться</span>
+						<svg class="subscribe__icon">
+							<use href="./images/icon/sprite.svg#icon-send"></use>
+						</svg>
+					</button>
+				</form>
 			</div>
 		</div>
 	</footer>
