--- a/portfolio.html
+++ b/portfolio.html
@@ -249,7 +249,7 @@
 			</div>
 			<div class="subscribe">
 				<b class="subscribe__title">Подпишитесь на рассылку</b>
-				<form class="subscribe__form js-footer-form" autocomplete="off">
+				<form class="subscribe__form js-footer2-form" autocomplete="off">
 					<label class="subscribe__field">
 						<input class="subscribe__input interactive" type="email" name="subscribe-email" placeholder=" ">
 						<span class="subscribe__label">E-mail</span>
